--- a/_config.yml
+++ b/_config.yml
@@ -17,17 +17,16 @@ timezone: Asia/Seoul
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy                          # the main title
+title: Cheo's devlog                          # the main title
 
-tagline: A text-focused Jekyll theme   # it will display as the sub-title
+tagline: 체오의 개발 블로그   # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
-  A minimal, portfolio, sidebar,
-  bootstrap Jekyll theme with responsive web design
-  and focuses on text presentation.
+  체오의 개발 블로그
+  Web, Frontend, Backend, Git
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: ''
+url: 'https://datalater.github.io'
 
 github:
   username: datalater             # change to your github username
@@ -35,8 +34,8 @@ github:
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@doamin.com             # change to your email address
+  name: Cheo
+  email: the7mincheol@gmail.com             # change to your email address
   links:
     # The first element serves as the copyright owner's link
     - https://github.com/datalater       # change to your github homepage
@@ -77,7 +76,7 @@ theme_mode:   # [light|dark]
 img_cdn: ''
 
 # the avatar on sidebar, support local or CORS resources
-avatar: https://cdn.jsdelivr.net/gh/cotes2020/chirpy-images/commons/avatar.jpg
+avatar: https://avatars.githubusercontent.com/u/8105528?v=4
 
 # boolean type, the global switch for ToC in posts.
 toc: true
